--- a/01-counter-app/package.json
+++ b/01-counter-app/package.json
@@ -16,9 +16,12 @@
         "react-dom": "^18.2.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.4",
+        "@babel/preset-env": "^7.24.4",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
+        "babel-jest": "^29.7.0",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
